# aether-giant-instruments

./: CMakeLists.txt  SUBHARMONIC_PLL_FIX_SUMMARY.md  SUBHARMONIC_PLL_MATHEMATICS.md  build_plugin.sh  test_subharmonic_pll.cpp
plugins/dsp/include/dsp/: AetherGiantVoiceDSP.h
src/dsp/: AetherGiantVoicePureDSP.cpp
tests/: compile_check.cpp
